JT-4932 - fixing the issue on firefox with the cut form field text

--- a/app/assets/stylesheets/components/_join-form.scss
+++ b/app/assets/stylesheets/components/_join-form.scss
@@ -53,7 +53,7 @@
   }
 
   input {
-    padding: 20px;
+    padding: 0 20px;
     width: 100%;
     height: $form-field-large-height;
     border: 1px solid $form-field-border-color;
